# backend-api

./: .env.example  .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yml
db/init/: init.sql
db/init/auth/: roles.sql
db/init/libs/: pgjwt.sql  request.sql  response.sql  schema_cache.sql  settings.sql
db/init/schemas/: schemas.sql  v1_0.sql
db/migrations/2023-06-24-114640_auth_users/: down.sql  up.sql
db/migrations/2023-06-28-083128_auth_api/: down.sql  up.sql
domain/: Cargo.toml
domain/src/: user.rs
migrations/2023-06-14-213154_init_db/: down.sql  up.sql
tests/api/: auth.rs  ctx.rs  jwt.rs  mod.rs  signin.rs  signup.rs  synthetics.rs  users.rs
