[package]
name = "backend-api"
version = "0.1.0"
description = "The backend API served with PostgREST."
edition = "2021"

[dev-dependencies]
grillon = { git = "https://github.com/owlduty/grillon", rev = "3072021383794b630d28dd4812253ac00fb5208c" }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
once_cell = "1.18.0"
dotenv = "0.15.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres" ] }
async-trait = "0.1.71"
uuid = { version = "1.4.0", features = ["v4"] }
rand = "0.8.5"
